--- a/src-theme/semantic-ui/template/ui/util/color-picker.html
+++ b/src-theme/semantic-ui/template/ui/util/color-picker.html
@@ -1,78 +1,97 @@
-<div ##main>
-
-<div style="width:50px; height: 30px;"
-    {style.background-color}="'#'+this.sv"></div>
-
-<ui-color-sv 
-    $ref="sv"
-    $width="150" 
-    $height="150" 
-    $cursor="crosshair"
-    $color!="this.color"
-    {model}="this.sv"
-    {model.$binding}="input"
-    {bind}="this.hue"></ui-color-sv>
-
-<ui-color-hue 
-    $ref="hue"
-    $width="30" 
-    $height="150" 
-    $cursor="crosshair"
-    $color!="this.color"
-    {model}="this.hue"
-    {model.$binding}="input"></ui-color-hue>
-
-<div style="clear:both">
-
-    HEX: <input type="text" 
-                {bind}="this.color.getHEX()"
-                {bind.$preserve-input}
-                {model}="this.input.hex"
-                {model.$binding}="input"
-                {model.$focus-only}><br>
-
-    R: <input type="number" 
-            {model}="this.input.r"
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getRGBA()[0]" 
-            {bind.$preserve-input}
-            min="0" max="255">
-    G: <input type="number" 
-            {model}="this.input.g"
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getRGBA()[1]" 
-            {bind.$preserve-input}
-            min="0" max="255">
-    B: <input type="number" 
-            {model}="this.input.b"
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getRGBA()[2]" 
-            {bind.$preserve-input}
-            min="0" max="255"><br>
-
-    H: <input type="number" 
-            {model}="this.input.h"
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getHSVA()[0]" 
-            {bind.$preserve-input}
-            min="0" max="360">
-    S: <input type="number" 
-            {model}="this.input.s"       
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getHSVA()[1]" 
-            {bind.$preserve-input}
-            min="0" max="100">
-    V: <input type="number" 
-            {model}="this.input.v"
-            {model.$binding}="input"
-            {model.$focus-only}
-            {bind}="this.color.getHSVA()[2]" 
-            {bind.$preserve-input}
-            min="0" max="100"><br>
+<div class="cpicker-codes">
+        <label class="cpicker-hex"> 
+                <span>Hex code</span>
+                <input type="text" 
+                        class="input-dark"
+                        {disabled}="this.loading"
+                        {focused}="this.focusHex"
+                        {bind}="'#'+this.color.getHEX()"
+                        {bind.$if}="!this.focusHex"
+                        {input}="this.pckr.onInputHex(this.$value)"
+                        {input.$if}="this.focusHex"></label>
+        <label class="cpicker-rgba"> 
+                <span>Rgba code</span>
+                <input type="text" 
+                        class="input-dark"
+                        {focused}="this.focusRgba"
+                        {disabled}="this.loading"
+                        {bind}="this.color.getRGBAString()"
+                        {bind.$if}="!this.focusRgba"
+                        {input}="this.pckr.onInputRgba(this.$value)"
+                        {input.$if}="this.focusRgba"></label>
 </div>
+
+<div class="cpicker-rgb" 
+        {show}="this.$cfg.showRgb"
+        {show.$display}="flex"
+        {class.no-alpha}="!this.$cfg.showAlpha">
+        <label class="cpicker-r">
+                <span>R</span>
+                <input type="number"  
+                        class="input-dark"
+                        {disabled}="this.loading"
+                        {focused}="this.focusR"
+                        {input}="this.pckr.onInputR(this.$value)"
+                        {input.$if}="this.focusR"
+                        {bind}="this.color.getR()" 
+                        {bind.$if}="!this.focusR"
+                        min="0" max="255"></label>
+        <label class="cpicker-g">
+                <span>G</span>
+                <input type="number" 
+                        class="input-dark"
+                        {disabled}="this.loading"
+                        {focused}="this.focusG"
+                        {input}="this.pckr.onInputG(this.$value)"
+                        {input.$if}="this.focusG"
+                        {bind}="this.color.getG()" 
+                        {bind.$if}="!this.focusG"
+                        min="0" max="255"></label>
+        <label class="cpicker-b">
+                <span>B</span>
+                <input type="number" 
+                        class="input-dark"
+                        {disabled}="this.loading"
+                        {focused}="this.focusB"
+                        {input}="this.pckr.onInputB(this.$value)"
+                        {input.$if}="this.focusB"
+                        {bind}="this.color.getB()" 
+                        {bind.$if}="!this.focusB"
+                        min="0" max="255"></label>
+        <label class="cpicker-a" {if}="this.$cfg.showAlpha">
+                <span>A</span>
+                <input type="number" 
+                        class="input-dark"
+                        {disabled}="this.loading"
+                        {focused}="this.focusA"
+                        {input}="this.pckr.onInputA(this.$value / 100)"
+                        {input.$if}="this.focusA"
+                        {bind}="parseInt(this.color.getAlpha() * 100)" 
+                        {bind.$if}="!this.focusA"
+                        min="0" max="100"></label>
+</div>
+
+<div class="cpicker-canvases" {class.no-alpha}="!this.$cfg.showAlpha">
+        <ui-color-sv 
+                $ref="sv"
+                $cursor="crosshair"
+                $hue="this.color.getH()"
+                {class}:="cpicker-sv"
+                {input}="this.pckr.onInputSV(this.$value)"
+                {bind}="[this.color.getS(true), this.color.getV(true)]"></ui-color-sv>
+        <ui-color-hue 
+                $ref="hue"
+                $cursor="crosshair"
+                $hue!="this.color.getH(true)"
+                {class}:="cpicker-hue"
+                {input}="this.pckr.onInputHue(this.$value)"></ui-color-hue>
+        <ui-color-alpha 
+                {show}="this.$cfg.showAlpha"
+                $ref="alpha"
+                $cursor="crosshair"
+                $color!="this.color.getHSVAString()"
+                $hue="this.color.getH(true)"
+                {class}:="cpicker-alpha"
+                {input}="this.pckr.onInputAlpha(this.$value)"
+                {bind}="this.color.getAlpha()"></ui-color-hue>    
 </div>
